Add home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,7 @@
     <title>Reach Out {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
-        <h1>Hello, Team ReachOut!</h1>
-    </header>
+    <header class="container-fluid fixed-top"></header>
 
     {% block page_header %}
     {% endblock %}
