feat: add connectionrequest app and files structure for static, media and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,11 +34,15 @@
   <body>
     <header class="container-fluid fixed-top"></header>
 
+    {% include 'includes/navbar.html' %}
+
     {% block page_header %}
     {% endblock %}
 
     {% block content %}
     {% endblock %}
+
+    {% include 'includes/footer.html' %}
 
     {% block postloadjs %}
     {% endblock %}
