--- a/connectionrequest/templates/connectionrequest/send-request.html
+++ b/connectionrequest/templates/connectionrequest/send-request.html
@@ -3,4 +3,19 @@
 
 {% block content %}
     <h1 class="text-success">Connection Request</h1>
+    <h2 class="text-center text-md-start ps-md-5 mb-5">Fill out the form below to send a Connection Request</h2>
+        <div class="row">
+            <div class="col-12 col-md-6 offset-md-3">
+                <!-- Connection Request Form -->
+                <form action="{% url 'send_connection_request' %}" method="POST">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <div class="text-center my-5">
+                        <a href="{% url 'home' %}" class="btn btn-dark">Cancel</a>
+                        <button type="submit" class="btn btn-success">Send Connection Request</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
 {% endblock %}
