feat: add form, view and template for connection request search

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,6 +8,7 @@
 <section class="page-section clearfix">
     <div class="jumbotron">
         <div class="container">
+            <a href="{% url 'connection_request_search' %}">Connection Search</a>
             <div class="here-to-help light-blue-bg">
                 <h1 class="display-3">Here To Help</h1>
                 <p>We all know support is likely out there for our struggles, but sometimes we need it most
