--- a/static/css/base.css
+++ b/static/css/base.css
@@ -112,3 +112,20 @@ h1, h2, h3 ,h4, h5 {
 .kate {
     border: 1px solid black;
 }
+
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
