Feat: How To page, full structure and basic styling added with additions to cs..  Fix:updates to readme Error: changes to css will cause merge conflict that will need review

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="here-to-help">
                 <h1 class="display-3">Here To Help</h1>
-                <p class="here-to-help-text green-bg-trans">We all know support is likely out there for our struggles, but sometimes we need it most
+                <p class="here-to-help-text gray-bg-trans">We all know support is likely out there for our struggles, but sometimes we need it most
                     from
                     the people that matter to us and are too worried about the outcomes to ask for it. Here at Reach Out
                     you can
