--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -2,5 +2,153 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">How to use page</h1>
+<section class="py-5 text-center container green-bg-trans how-to-jumbotron">
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">How to Use Reach Out</h1>
+            <p class="lead text-muted">Below you'll find a guide that will lead you step by step on how to go about
+                preparing a
+                message to the people you want to contact. The only thing you will need is their email address.<br>
+            </p>
+        </div>
+    </div>
+</section>
+
+<div class="container marketing">
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user1.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="green">Anna</h2>
+            <p>I was scared from all the old horror stories of kids being shunned or abandoned by their friends and
+                family
+                for their sexuality. I used Reach Out to tell my friends that 'someone they knew' was struggling to talk
+                about it. After recieving a number of encouraging messages it gave me the confidence to come out in
+                person
+                and shortly after told my parents! I'm finally feeling more like the real me.
+            </p>
+
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user2.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="red">Leeroy</h2>
+            <p>For a long time I felt alone in my interests. I don't enjoy football and felt left out at school because
+                of
+                it.
+                I used Reach Out to ask if any of the people I knew would be interested in hanging out to play
+                boardgames. I
+                now
+                have a close circle of friends and we meet up regularly to play Dungeons and Dragons!</p>
+
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="rounded-circle kate" src="{{ MEDIA_URL }}user3.png" alt="Generic placeholder image" width="140"
+                height="140">
+            <h2 class="light-blue">Kate</h2>
+            <p>After my husband passed away I became incredibly reclusive and scared I was a burden on the people around
+                me.
+                When
+                I found this website I contacted the people I knew to ask for help. I was shocked at first that they
+                accepted
+                and wanted me to reach out to them for help despite not fully knowing who I was. My friendships have
+                become
+                deeper,
+                more meaningful and I have since found the confidence in myself to try dating again.
+            </p>
+
+        </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+</div>
+
+<div class="album py-5 bg-light">
+    <div class="container">
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder green-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-user-plus"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">The first thing you will need to do is register an account with us.
+                            This is just for security purposes, none of the details you submit will be shared.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder dark-blue-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-check"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Once you've verified your account, you can go to the reach out page where
+                            you will be given options on how to craft your message.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder green-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-envelope"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">We've created a number of template messages to help you with various topics
+                            of conversation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Second Row -->
+
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder dark-blue-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-pencil"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">If the none of the templates suit your needs, you can select to craft your
+                            own message.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder green-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-comments"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">After sending your message, the recipients that you listed will recieve an
+                            email
+                            inviting them to chat. If they accept, they'll be brought to this website where you can send
+                            each
+                            other messages through the website. Your identity will remain hidden unless you choose to tell
+                            them.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col how-to-holder">
+                <div class="card shadow-sm">
+                    <div class="icon-holder dark-blue-bg row align-items-center">
+                        <div class="icon-holder-icon white col"><i class="fa-solid fa-handshake-angle"></i></div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">If you're unable to get the response or help that you were hoping for,
+                            don't be
+                            disheartened. There are plenty of professional services out there who want to help you with
+                            your
+                            struggles and we're proud of you for taking this difficult step.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
