Fix: updated href links for existing pages in nav bar and footer.

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -15,11 +15,11 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Reach Out</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">How to Reach Out</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About Us</a></li>
+      <li class="nav-item"><a href="{% url 'how_to_use' %}" class="nav-link px-2 text-muted">How to Reach Out</a></li>
+      <li class="nav-item"><a href="{% url 'about_us' %}" class="nav-link px-2 text-muted">About Us</a></li>
     </ul>
   </footer>
 </div>
