--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -23,10 +23,10 @@
                     <a class="navlink" href="">Reach Out</a>
                 </li>
                 <li class="nav-item">
-                    <a class="navlink" href="">How To</a>
+                    <a class="navlink" href="{% url 'how_to_use' %}">How To</a>
                 </li>
                 <li class="nav-item">
-                    <a class="navlink" href="">About Us</a>
+                    <a class="navlink" href="{% url 'about_us' %}">About Us</a>
                 </li>
             </ul>
         </div>
