--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,20 @@
 {% extends "base.html" %}
+
+{% load static %}
+
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css/allauth.css' %}">
+{% endblock %}
+
+{% block content %}
+  <div id="allauth-content" class="container container-header">
+    <div class="row">
+      <div class="col-12 col-md-6 offset-md-3 text-center text-md-start">
+        <div class="allauth-form-inner-content my-5">
+          {% block inner_content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
