--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,8 +4,8 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+{% block inner_content %}
+<h1 class="mb-4">{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
