Feat: resolved #54 adding dropdown links to reach out nav-item in navbar; part styled about us page

--- a/home/templates/home/about-us.html
+++ b/home/templates/home/about-us.html
@@ -2,5 +2,28 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">About Us Page</h1>
+<!-- <div>
+    <img src="{{ MEDIA_URL }}about-hero.webp" class="img-fluid" alt="...">
+</div> -->
+
+<section id="about-hero">
+    <div class="about-container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h1 class="display-4 text-success">About Us</h1>
+                <p> Needs Text</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="display-4 text-success">About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Vitae, quaerat quod! Adipisci maxime, ?
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 {% endblock %}
