Feat: Part styled about page, styled connection request pages, fix sticky navbar issue, started 404 page

--- a/home/templates/home/about-us.html
+++ b/home/templates/home/about-us.html
@@ -2,28 +2,184 @@
 {% load static %}
 
 {% block content %}
-<!-- <div>
-    <img src="{{ MEDIA_URL }}about-hero.webp" class="img-fluid" alt="...">
-</div> -->
+    <!-- About Us page -->
+    <section id="about-hero" class="img-fluid">
+        <div class="about-container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h1 class="display-4 text-shadow-primary">What is Reach Out?</h1>
+                    <p class=" about-lead h4">
+                        Reach Out aims to help anyone currently facing difficulties to take the first steps in reaching out to their
+                        friends and family for support.
+                    </p>
+                    <p class="h4 blurb mt-4">
+                        Designed with the hope of giving confidence to anyone who is struggling with approaching a friend
+                        or a loved one to broach difficult topics of conversation, Reach Out is an App where users
+                        can send a message to someone they know, inviting them to talk.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Our team section -->
+    <section class="team page-margin justify-content-center">
+        <div class="container-lg my-1 py-1">
+            <div class="text-center mb-4">
+                <h2 class=" display-4 text-shadow-primary">Meet Our Team</h2>
+                <p class="h4">This project is a collaborative effort, made possible by:</p>
+            </div>
+        </div>
+        <!-- start of team cards -->
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 justify-content-center g-2 mx-4 px-2">
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Abhisek Joshi</h3>
+                            <p class="card-text">
+                                <a href="https://www.linkedin.com/in/abhisekjoshi/" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/nofursad" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Baiju Abraham</h3>
+                            <p class="card-text">
+                                <a href="https://www.linkedin.com/in/baiju-abraham-a40633225/" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/baijuka" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Chris Lawbuary</h3>
+                            <p class="card-text">
+                                <a href="https://www.linkedin.com/in/" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/nofursad" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text about-lead"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 justify-content-center g-2 mx-4 px-2">
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Joy Zadan</h3>
+                            <p class="card-text">
+                                <a href="www.linkedin.com/in/joy-araneta-zadan" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/JoyZadan" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Nick Lennon</h3>
+                            <p class="card-text">
+                                <a href="https://www.linkedin.com/in/n-lennon/" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/nlenno1" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="{% static 'img/samuel-dainton' %}" class="card-img" alt="Sam Dainton">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title team-member">Sam Dainton</h3>
+                            <p class="card-text">
+                                <a href="https://www.linkedin.com/in/samuel-dainton/" class="about-icons"ctarget="_blank">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/Samuel-Dainton" class="about-icons" target="_blank">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                                but as a means to return favours or to pay it forward.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<section id="about-hero">
-    <div class="about-container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h1 class="display-4 text-success">About Us</h1>
-                <p> Needs Text</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="display-4 text-success">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Vitae, quaerat quod! Adipisci maxime, ?
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
 
 
 {% endblock %}
