--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<section class="py-5 text-center container green-bg-trans how-to-jumbotron">
+<section class="py-5 text-center container green-bg-trans how-to-jumbotron page-margin">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">How to Use Reach Out</h1>
