--- a/connectionrequest/templates/connectionrequest/search-for-request.html
+++ b/connectionrequest/templates/connectionrequest/search-for-request.html
@@ -2,20 +2,21 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="text-success">Search for a Connection Request</h1>
-    <h2 class="text-center text-md-start ps-md-5 mb-5">Enter you connection code to find your Connection Request</h2>
-        <div class="row">
-            <div class="col-12 col-md-6 offset-md-3">
-                <!-- Connection Request Search Form -->
-                <form action="{% url 'connection_request_search' %}" method="POST">
-                    {% csrf_token %}
-                    {{ form | crispy }}
-                    <div class="text-center my-5">
-                        <a href="{% url 'home' %}" class="btn btn-dark">Cancel</a>
-                        <button type="submit" class="btn btn-success">Search for Connection Request</button>
-                    </div>
-                </form>
+    <section class="page-margin">
+        <h1 class="text-success text-center ml-4 mt-2 text-shadow-primary">Search for a Connection Request</h1>
+        <h2 class="text-center text-md-start ps-md-5 mb-5 mt-3">Enter you connection code to find your Connection Request</h2>
+            <div class="row">
+                <div class="col-12 col-md-6 offset-md-3">
+                    <!-- Connection Request Search Form -->
+                    <form action="{% url 'connection_request_search' %}" method="POST">
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                        <div class="text-center my-5">
+                            <a href="{% url 'home' %}" class="btn btn-dark">Cancel</a>
+                            <button type="submit" class="btn btn-success">Search for Connection Request</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-
+    </section>
 {% endblock %}
