--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,20 +4,18 @@
 {% block content %}
 
 <!-- Site introduction -->
-
 <section class="page-section clearfix">
     <div class="jumbotron">
         <div class="container">
             <div class="here-to-help">
-                <h1 class="display-3">Here To Help</h1>
-                <p class="here-to-help-text gray-bg-trans">We all know support is likely out there for our struggles, but sometimes we need it most
-                    from
-                    the people that matter to us and are too worried about the outcomes to ask for it. Here at Reach Out
-                    you can
-                    use this platform to start those difficult conversations anonymously. Have a read of our users
-                    testimonies to
-                    see how this service has helped better their lives and how you can do the same for yourself.</p>
-                <p><a class="btn btn-primary btn-lg" href="{% url 'how_to_use' %}" role="button">Learn more »</a></p>
+                <h1 class="display-3 text-shadow">Here To Help</h1>
+                <p class="here-to-help-text gray-bg-trans">We all know support is likely out there for our struggles,
+                    but sometimes we need it most from the people that matter to us and are too worried about the
+                    outcomes to ask for it. Here at Reach Out you can use this platform to start those difficult
+                    conversations anonymously. Have a read of our users testimonies to see how this service has
+                    helped better their lives and how you can do the same for yourself.
+                </p>
+                <p><a class="btn btn-success btn-lg" href="{% url 'how_to_use' %}" role="button">Learn more »</a></p>
             </div>
         </div>
     </div>
@@ -69,7 +67,7 @@
     <div class="jumbotron green-bg">
         <div class="container">
             <div class="signup-divider white">
-                <h1 class="display-3">Don't Hesitate</h1>
+                <h1 class="display-3 text-shadow">Don't Hesitate</h1>
                 <p>The longer you take to open up, the longer you spend not living your best life. There's no reason
                     to take on these challenges alone. There are people out there willing to help you.
                 </p>
