--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,11 +1,9 @@
 {% load static %}
 
 <!-- NAVBAR STYLING -->
-<nav class="navbar navbar-light navbar-expand-md fixed-top primary">
+<nav class="navbar navbar-light navbar-expand-md primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{{ MEDIA_URL }}logo.svg" alt="" class="img-fluid" width="150px">
-        </a>
+        <a class="navbar-brand" href="{% url 'home' %}"></a>
         <button id="menu-toggle-button" class="navbar-toggler"
             type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +23,8 @@
                         Reach Out
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="">Send</a></li>
-                        <li><a class="dropdown-item" href="">Search</a></li>
+                        <li><a class="dropdown-item" href="{% url 'send_connection_request'%}">Send</a></li>
+                        <li><a class="dropdown-item" href="{% url 'connection_request_search'%}">Search</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
